--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -15,6 +15,8 @@
 
 %include the usecases package
 \usepackage{usecases}
+
+
 \begin{document}
 
 %Sometimes it is a good idea to put domain objects in \texttt{}
@@ -29,31 +31,14 @@
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{}{
-\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts
-    prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which
-	users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of 
-	program structure in a functional way.  Users may create games and share their creations with others. 
-	Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.	
-	Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow 
-	further development and additional educational opportunities. 
-    \newline
+\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Users may create games and share their creations with others. Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.	Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow further development and additional educational opportunities.\newline
+	
+\indent The Visual Editor (VE) module will provide a visual programming language editor (in essence, an integrated development environment(IDE)).  The VE will allow users to arrange programming elements to create an animation sequence; programming elements will include methods, variables, control statements, etc. The VE will, while enforcing syntax rules, convert the program into JavaScript, which will be used by other modules. The VE aims to create an interface that it is easy to use, and following its name will create a view that is always immediately ready to be seen. Since it will be using JavaScript, there will be no time to wait for compiling to see if the code "works," on the view of the end-user. Rather, the code, or sequence of events defined by the user will be always ready to run unless a script notifying the user otherwise.\newline
 
-\indent The Visual Editor (VE) module will provide a visual programming language editor (in essence, an integrated development environment(IDE)).  The VE will allow users
-	to arrange programming elements to create an animation sequence; programming elements will include methods, variables, control statements, etc. 
-	The VE will, while enforcing syntax rules, convert the program into JavaScript, which will be used by other modules.
-    \newline
-
-\indent The VE will directly interact with two other Edith modules, Object Creator and Story Creator.  It will provide the Object Creator an interface for defining
-	objects, and the Story Creator an interface for defining animations.  The VE will be able to run its own disply view and integrate into the views of 
-	other Edith modules.
-    \newline
-
-\indent The user will be able to export his program in JavaScript/JavaScript Object Notation (JSON) format. JSON is an efficient data interchange text format that is language independent.
-   
+\indent The VE will be able to directly interact with two other Edith modules, Object Creator and Story Creator, while still being able to run independently.  It will provide the Object Creator an interface for defining objects, and the Story Creator an interface for defining animations.  In short, the VE will be able to run its own display view and integrate into the views of other Edith modules. The VE will provide not only an interface for the end-user to create their own code, but also for the other modules to implement code provided by the visual editor.\newline
+	
+\indent The user will be able to export his program in JavaScript/JavaScript Object Notation (JSON) format. JSON is an efficient data interchange text format that is language independent. The purpose of this is to again encourage learning of coding to our target users -- young students who wish to learn more about what they are doing as far as coding, what their changes look like from a lower level than the visual editing.\newline
 }
-
-
-
 
 \end{usecase}
 
