--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -15,7 +15,7 @@
 
 %include the usecases package
 \usepackage{usecases}
-
+\usepackage[margin=1in]{geometry}
 
 \begin{document}
 
@@ -31,12 +31,12 @@
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{}{
-\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Users may create games and share their creations with others. Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.	Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow further development and additional educational opportunities.\newline
-	
+\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Users may create games and share their creations with others. Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.	Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow further development and additional educational opportunities.\newline	
+
 \indent The Visual Editor (VE) module will provide a visual programming language editor (in essence, an integrated development environment(IDE)).  The VE will allow users to arrange programming elements to create an animation sequence; programming elements will include methods, variables, control statements, etc. The VE will, while enforcing syntax rules, convert the program into JavaScript, which will be used by other modules. The VE aims to create an interface that it is easy to use, and following its name will create a view that is always immediately ready to be seen. Since it will be using JavaScript, there will be no time to wait for compiling to see if the code "works," on the view of the end-user. Rather, the code, or sequence of events defined by the user will be always ready to run unless a script notifying the user otherwise.\newline
 
-\indent The VE will be able to directly interact with two other Edith modules, Object Creator and Story Creator, while still being able to run independently.  It will provide the Object Creator an interface for defining objects, and the Story Creator an interface for defining animations.  In short, the VE will be able to run its own display view and integrate into the views of other Edith modules. The VE will provide not only an interface for the end-user to create their own code, but also for the other modules to implement code provided by the visual editor.\newline
-	
+\indent The VE will be able to directly interact with two other Edith modules, Object Creator and Story Creator, while still being able to run independently.  It will provide the Object Creator an interface for defining objects, and the Story Creator an interface for defining animations.  In short, the VE will be able to run its own display view and integrate into the views of other Edith modules. The VE will provide not only an interface for the end-user to create their own code, but also for the other modules to implement code provided by the visual editor.\newline	
+
 \indent The user will be able to export his program in JavaScript/JavaScript Object Notation (JSON) format. JSON is an efficient data interchange text format that is language independent. The purpose of this is to again encourage learning of coding to our target users -- young students who wish to learn more about what they are doing as far as coding, what their changes look like from a lower level than the visual editing.\newline
 }
 
@@ -50,8 +50,6 @@
 %Primary Actor: Calls on the system to deliver its services.
 \addfield{Primary Actor:}{End-User}
 
-
-
 %Preconditions: What must be true on start and worth telling the reader?
 \addfield{Preconditions:}{Add method which does have a variable parameter.}
 %when multiple
@@ -64,32 +62,33 @@
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{Main Success Scenario:}{
-    \item User selects variable
-    \item User changes the parameter 
-    \item Check type
-    \item If it is a compatible type allow input and save parameter
+    \item[1.] User selects variable
+    \item[2.] User changes the parameter 
+    \item[3.] Check type
 }
 
 %Extensions: Alternate scenarios of success or failure.
 \addscenario{Extensions:}{
-	\item[2.a] Invalid type data:
+	\item[3.a] Invalid type data:
 		\begin{enumerate}
-		\item[1.]  Incorrect input
-		\item[2.] User returns to step 1 or exits
+		\item[1.]  Incorrect input.
+		\item[1.a] Boundary warning.
+		\item[1.b] Wrong type.
+		\item[2.]  User returns to step 1 or exits.
 		\end{enumerate}
-
+	\item[3.b] Compatible type:
+		\begin{enumerate}
+		\item[1.] System accepts input and saves parameter.
+		\end{enumerate}				
 }
 
 %Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
+\addscenario{Non-Functional      Requirements Needed:}{
 	\item Learning Experience.
 	\item Usability.
 }
-
-
 %Miscellaneous: Such as open issues/questions
 %\addfield{Open Issues:}{}
-
 \end{usecase}
 
 \begin{usecase}
@@ -107,15 +106,14 @@
 %\additemizedfield{Preconditions:}{} 
 
 %Postconditions: What must be true on successful completion and worth telling the reader
-\addfield{Postconditions:}{Method is now ready to be use.}
+\addfield{Postconditions:}{Method is now ready to be used.}
 %when multiple
 %\additemizedfield{Preconditions:}{}
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{Main Success Scenario:}{
-    \item User creates new variable and selects it
-    \item They can now drag and drop the variable in the boundaries provided
-
+    \item[1.] User creates new variable and selects it.
+    \item[2.] They can now drag and drop the variable in the boundaries provided.
 
 }
 
@@ -130,7 +128,7 @@
 }
 
 %Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
+\addscenario{Non-Functional Requirements Needed:}{
 	\item Learning Experience.
 	\item Usability.
 }
@@ -143,27 +141,23 @@
 
 \begin{usecase}
 
-\addtitle{Use Case 3}{Instantiating  a Conditional Statement } 
+\addtitle{Use Case 3}{Instantiating a conditional statement } 
 
 %Primary Actor: Calls on the system to deliver its services.
-\addfield{Primary Actor:}{End-User}
-
-
-
+\addfield{Primary Actor:}{End-User; developer}
 
 %Postconditions: What must be true on successful completion and worth telling the reader
-\addfield{Postconditions:}{A conditional is instantiated}
+\addfield{Postconditions:}{A conditional is instantiated.}
 %when multiple
 %\additemizedfield{Preconditions:}{}
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{Main Success Scenario:}{
-    \item A user drags and drops a conditional statement
-    \item they change the parameter (e.g. if this) 
-    \item the inside of the conditional is then draged and dropped
+    \item[1.] A user drags and drops a conditional statement
+    \item[2.] They change the parameter (e.g. if this) 
+    \item[3.] The inside of the conditional is then dragged and dropped (e.g. then that).
 
 }
-
 
 %Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
 \additemizedfield{Non-Functional Requirements Needed:}{
@@ -199,7 +193,7 @@
 
 
 %Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
+\addscenario{Non-Functional Requirements Needed:}{
 	\item Learning Experience.
 	\item Usability.
 }
