--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -18,6 +18,21 @@
 \usepackage[margin=1in]{geometry}
 
 \begin{document}
+\begin{titlepage}
+    \vspace*{75pt} %leave out given verticle space in a document
+    \begin{center}
+    	{\Huge Edith Visual Editor}\\ [1cm]	%make title huge and have .5cm space in between
+		{\Large Graham Baker\\
+Walker Bohannan\\
+Steve Marx    \\
+Vikram Nilakantan\\
+Jessica Penick\\
+Eli Spiegel
+}\\[0.5cm]
+		\today %put the date that the data is compiled
+	\end{center}
+	\vspace*{\fill}
+\end{titlepage}
 
 %Sometimes it is a good idea to put domain objects in \texttt{}
 %The template and the descriptions are based on the book Applying UML and Patterns: 
@@ -31,7 +46,7 @@
 
 %Main Success Scenario: A typical, unconditional happy path scenario of success.
 \addscenario{}{
-\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Users may create games and share their creations with others. Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.	Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow further development and additional educational opportunities.\newline	
+\item []\indent Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates a 2-D character, or sprite, provided by the program.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Users may create games and share their creations with others. Similar programs (e.g., Alice) have been shown to increase the interest level and retention of students taking their first programming classes.    Edith will be written primarily in JavaScript and will be available over the internet.  After initial development, the software will be open-source to allow further development and additional educational opportunities.\newline	
 
 \indent The Visual Editor (VE) module will provide a visual programming language editor (in essence, an integrated development environment(IDE)).  The VE will allow users to arrange programming elements to create an animation sequence; programming elements will include methods, variables, control statements, etc. The VE will, while enforcing syntax rules, convert the program into JavaScript, which will be used by other modules. The VE aims to create an interface that it is easy to use, and following its name will create a view that is always immediately ready to be seen. Since it will be using JavaScript, there will be no time to wait for compiling to see if the code "works," on the view of the end-user. Rather, the code, or sequence of events defined by the user will be always ready to run unless a script notifying the user otherwise.\newline
 
