adds executive summary by Kramer Canfield

--- a/Animation_Requirement_Spec.tex
+++ b/Animation_Requirement_Spec.tex
@@ -29,7 +29,7 @@
 
 %Executive Summary
 \section{\emph{Executive Summary}}
-Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!Our Summary will be placed here!
+One of the components of the "Edith" system, a 2D web-based computer science teaching tool, is the Animation System module, a sub-system of Edith. The Animation System module is important because it includes the core animation frameworks and specifications of how the animations and audio will be produced. In a visually-based programming environment, this module is clearly important because it provides animations without requiring the user to have any knowledge of a scripting language or computer graphics concepts. There is only one use case for this module: provide animations and play sounds. The animations are specified by a different sub-system which delivers the instructions to the Animation System module. The Animation System processes the instructions (assuming the instructions were delivered correctly) and delivers the animations and audio to another sub-system to be displayed on the screen as desired.
 
 
 %Introduction
@@ -54,7 +54,7 @@ Our Summary will be placed here!Our Summary will be placed here!Our Summary will
   \end{enumerate}
   \item Preconditions/Assumptions
   \begin{enumerate}
-   		 \item Preconditions: The user has already defines which sprites will be animated and which sounds will be played.
+   		 \item Preconditions: The user has already defined which sprites will be animated and which sounds will be played.
    		 \item Assumptions: The web browser supports HTML5 and JavaScript.
   \end{enumerate}
   \item Flow of Events
