--- a/Requirements.tex
+++ b/Requirements.tex
@@ -20,12 +20,10 @@ September 29, 2013
 
 \begin{center}
 {\bf\large Abstract \\[1\baselineskip] }
-{\it
-
-
-
-}
 \end{center}
+{
+\paragraph{\parindent 20pt}This document describes the functions and interactions that occur between the Object Creation module and the various other parties it communicates with in an application called Edith, a collaborative project created by the CS 240 Software Engineering class for fall of 2013. The Object Creation module is responsible for creating sprites, visual representations of objects, to act out the storyline set forth by the user. This document outlines various expected interactions between the module, the user, and other components within Edith, as well as the conditions necessary to properly utilize the software. It also outlines the intended purpose of the module and key design considerations for its construction and use.
+}
 \pagebreak
 
 {\bf\large Introduction: \\[1\baselineskip] }
