Renamed pdf and added image
Renamed the UML diagram to not have a space and added the pdf into our
latex file. Need to keep it in the same folder though to work.

--- a/Requirements.tex
+++ b/Requirements.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{report}
 \setlength{\parindent}{0pt}
 \usepackage{hyperref}
+\usepackage{pdfpages}
 \begin{document}
 % This is the cover letter
 \begin{center}
@@ -126,6 +127,9 @@ Alternatives:\\
 Postcondition:  The image is now displayed in the application canvas and exists as an object to be manipulated.
 
 \pagebreak
+
+
+\includepdf[pages={1}]{UML_Diagram.pdf}
 
 {\bf\large Nonfunctional Requirements:}\\[1\baselineskip]
 Availability: \\
