--- a/Requirements.tex
+++ b/Requirements.tex
@@ -28,6 +28,10 @@ September 29, 2013
 \pagebreak
 
 {\bf\large Introduction: \\[1\baselineskip] }
+//Edith will be a web-based version of the instructional system developed at CMU, Alice. It will be a 2D system which allows students to work within a virtual environment in order to create objects and animate them through a story. The objects will be able to be customized by the user through a drag-and-drop interface. Edith will also allow students to use their objects to create animations using a visual programming language, add user interactions to create game-like experiences, and share their creations with others.
+//We will produce an Object Creator within Edith, which will display a view utilizing the Visual Editor. It will allow the user to create graphical sprites for animations by providing a graphical drawing and manipulation system. The user created sprites will also have user defined behaviors. The objects/sprites will be saved as an output in the form of a JSON specification to be used in other modules.
+//The Object Creator will serve as a connection between the Visual Editor and the Animation System and allow users to create objects, such as sprites and other story elements, which will be part of a storyline. Graphical representations of the objects will be implemented by the user through painting, manipulating geometrical primitives, or importing images. The user will also be able to define specific behaviors, or methods, for the objects through the use of the Visual Editor. This product will allow the student to switch between the Object Creator and the Story Creator in order to build all the components of their own animation story. The Object Creator will also provide a way for students to use their objects in other modules by saving them in the form of a JSON/Javascript specification of the user defined object. Finally, the Object Creator will run in its own display view, with will include the Visual Editor. 
+//Edith will be a valuable tool aimed at helping students learn to program through a fun and interactive environment. It will enable students to create their own characters/sprites and animate them throughout a storyline. The users will be able to customize their objects in a drag-and-drop interface and animate those objects through a visual programming language. The students will have the opportunity to add user interactions in order to create game-like experiences and also share their creations with other students. Our Object Creator will work within Edith to provide a way for students to create and manipulate their characters. Our product will serve as a connection between the Animation System, providing necessary tools to create a character, and the Visual Editor, an environment to define character behaviors.
 
 \pagebreak
 
