--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -11,10 +11,12 @@
 % and version 1.3 or later is part of all distributions of LaTeX
 % version 2005/12/01 or later.
 
-\documentclass[a4paper, 10pt, oneside, draft]{article}
+\documentclass[a4paper, 10pt, oneside]{article}
 
 %include the usecases package
 \usepackage{usecases}
+\usepackage{graphicx}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg}
 \usepackage[margin=1in]{geometry}
 
 \begin{document}
@@ -684,6 +686,13 @@ Eli Spiegel
 %Miscellaneous: Such as open issues/questions
 %\addfield{Open Issues:}{}
 
+\end{usecase}
+\newpage
+
+\begin{usecase}
+\addtitle{Use Case Diagram}{}
+% Use case diagram inserted
+\includegraphics[scale=.2]{req_uml_diag.png}
 \end{usecase}
 
 \begin{usecase}
