--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -538,155 +538,7 @@ Eli Spiegel
 %\addfield{Open Issues:}{}
 
 \end{usecase}
-
-\begin{usecase}
-
-\addtitle{Use Case 12}{Connecting actions} 
-
-%Primary Actor: Calls on the system to deliver its services.
-\addfield{Primary Actor:}{End-User}
-
-
-
-%Preconditions: What must be true on start and worth telling the reader?
-\addfield{Preconditions:}{There are two actions on the development board.}
-%when multiple
-%\additemizedfield{Preconditions:}{} 
-
-%Postconditions: What must be true on successful completion and worth telling the reader
-\addfield{Postconditions:}{The methods are connected}
-%when multiple
-%\additemizedfield{Preconditions:}{}
-
-%Main Success Scenario: A typical, unconditional happy path scenario of success.
-\addscenario{Main Success Scenario:}{
-    \item The action is selected by the user
-    \item The action is dragged above or below the action they want to connect to
-    \item Release to connect
-
-}
-
-%Extensions: Alternate scenarios of success or failure.
-\addscenario{Extensions:}{
-	\item[2.a] Invalid Action Placement:
-		\begin{enumerate}
-		\item[1.]  If the user misses the action while dropping another one on it or the user drops the action in a place out of the frames range, the action will be returned to where it got picked up from. 
-    	\end{enumerate}
-
-}
-
-%Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
-	\item Learning Experience.
-	\item Usability.
-}
-
-
-%Miscellaneous: Such as open issues/questions
-%\addfield{Open Issues:}{}
-
-\end{usecase}
-
-
-\begin{usecase}
-
-\addtitle{Use Case 13}{Save a collection of methods} 
-
-%Primary Actor: Calls on the system to deliver its services.
-\addfield{Primary Actor:}{End-User}
-
-
-
-%Preconditions: What must be true on start and worth telling the reader?
-\addfield{Preconditions:}{There is a method to be saved on the board.}
-%when multiple
-%\additemizedfield{Preconditions:}{} 
-
-%Postconditions: What must be true on successful completion and worth telling the reader
-\addfield{Postconditions:}{The method is saved}
-%when multiple
-%\additemizedfield{Preconditions:}{}
-
-%Main Success Scenario: A typical, unconditional happy path scenario of success.
-\addscenario{Main Success Scenario:}{
-    \item The user selects the method or the set of actions that they want to save. The method gets highlighted
-    \item The user clicks the save button
-    \item Method is added to list of actions that the User can access. 
-    \item User is prompted to name method
-    \item Method is created after it is named
-    
-
-}
-
-%Extensions: Alternate scenarios of success or failure.
-\addscenario{Extensions:}{
-	\item[2.a] Invalid Action Sequence:
-		\begin{enumerate}
-		\item[1.]  If the user selects the set of actions, and then clicks somewhere other than the save button, the set of actions becomes deselected
-    	\end{enumerate}
-
-}
-
-%Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
-	\item Learning Experience.
-	\item Usability.
-}
-
-
-%Miscellaneous: Such as open issues/questions
-%\addfield{Open Issues:}{}
-
-\end{usecase}
-
-\begin{usecase}
-
-\addtitle{Use Case 14}{Delete a Method} 
-
-%Primary Actor: Calls on the system to deliver its services.
-\addfield{Primary Actor:}{End-User}
-
-
-
-%Preconditions: What must be true on start and worth telling the reader?
-\addfield{Preconditions:}{There is a method to be deleted on the board.}
-%when multiple
-%\additemizedfield{Preconditions:}{} 
-
-%Postconditions: What must be true on successful completion and worth telling the reader
-\addfield{Postconditions:}{The method is dleted}
-%when multiple
-%\additemizedfield{Preconditions:}{}
-
-%Main Success Scenario: A typical, unconditional happy path scenario of success.
-\addscenario{Main Success Scenario:}{
-    \item The user selects the method or the set of actions that they want to save. The method gets highlighted
-    \item The user clicks the delete button
-    \item Method is deleted
-    
-
-}
-
-%Extensions: Alternate scenarios of success or failure.
-\addscenario{Extensions:}{
-	\item[2.a] Invalid Action Sequence:
-		\begin{enumerate}
-		\item[1.]  If the user selects the set of actions, and then clicks somewhere other than the delete button, the set of actions becomes deselected
-    	\end{enumerate}
-
-}
-
-%Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
-\additemizedfield{Non-Functional Requirements Needed:}{
-	\item Learning Experience.
-	\item Usability.
-}
-
-
-%Miscellaneous: Such as open issues/questions
-%\addfield{Open Issues:}{}
-
-\end{usecase}
+% New Page for Use Case Diagram
 \newpage
 
 \begin{usecase}
