Added Use Case 15

--- a/docs/Requirements.tex
+++ b/docs/Requirements.tex
@@ -669,6 +669,53 @@ Eli Spiegel \\
 
 \end{usecase}
 
+\begin {usecase}
+
+
+\addtitle{Use Case 15}{Delete Sprite Object} 
+
+%Primary Actor: Calls on the system to deliver its services.
+\addfield{Primary Actor:}{End-User}
+
+
+
+%Preconditions: What must be true on start and worth telling the reader?
+\addfield{Preconditions:}{The selected Sprite object exists}
+%when multiple
+%\additemizedfield{Preconditions:}{} 
+
+%Postconditions: What must be true on successful completion and worth telling the reader
+\addfield{Postconditions:}{Selected Sprite object has been removed from visual editor.}
+%when multiple
+%\additemizedfield{Preconditions:}{}
+
+%Main Success Scenario: A typical, unconditional happy path scenario of success.
+\addscenario{Main Success Scenario:}{
+    \item The user selects a Sprite from the visual editor.
+    \item The user clicks on the Remove Sprite button
+    \item The sprite and its associated methods/actions are removed from the visual editor
+
+}
+
+%Extensions: Alternate scenarios of success or failure.
+\addscenario{Extensions:}{
+	\item[1] User selects 'Remove Sprite' when none exists
+	\item[1.a.] System tells user that a Sprite must be first created to remove it.
+
+}
+
+%Non-Functional Requirements Needed: Related Non-Functional Requirements Needed.
+\additemizedfield{Non-Functional Requirements Needed:}{
+	\item Usability
+	\item Learning Experience
+}
+
+
+%Miscellaneous: Such as open issues/questions
+%\addfield{Open Issues:}{}
+
+\end{usecase}
+
 % New Page for Use Case Diagram
 \newpage
 
