--- a/docs/VisualEditor_Requirements.tex
+++ b/docs/VisualEditor_Requirements.tex
@@ -23,7 +23,7 @@
 \begin{titlepage}
     \vspace*{75pt} %leave out given verticle space in a document
     \begin{center}
-    	{\Huge Edith Visual Editor}\\ [1cm]	%make title huge and have .5cm space in between
+        {\Huge Edith Visual Editor}\\ [1cm]	%make title huge and have .5cm space in between
 		{\Large Graham Baker\\
 Walker Bohannan\\
 Steve Marx    \\
@@ -31,9 +31,10 @@ Vikram Nilakantan\\
 Jessica Penick\\
 Eli Spiegel \\
 }
+    \today %put the date that the data is compiled
+\vspace*{75pt}
+		
 
-		\today %put the date that the data is compiled
-\newline
 
 \noindent This document describes how a user of Edith, an educational software designed to teach young computer scientists the basics of programming, will be able to interact with the program by developing a story. The visual interface of Edith is designed to graphically represent bits of code and let the user manipulate physical objects instead of using text. Edith should effectively teach young programmers some of the building blocks of programming. The visual interface will support the user creating new methods, control structures, and conditional statements by dragging and dropping graphic representations of code together. The visual-editor must interact directly with the Object and Story creator in order to implement the user's visual abstraction of code. When the user completes the story, the visual interface will be able to convert the shapes and symbols into JavaScript. This visual representation will give young coders instant gratification encouraging them to progress to text-based programming. 
 	\end{center}
